[gd_scene load_steps=3 format=3 uid="uid://1qjgquvvmfm"]

[ext_resource type="Script" path="res://Scenes/player_stats_ui.gd" id="1_b1jkg"]
[ext_resource type="Texture2D" uid="uid://bi7gi65us3ojd" path="res://Icons/pound-sterling.png" id="1_lnd5c"]

[node name="PlayerStatsUI" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 0.094
anchor_bottom = 0.054
offset_right = 0.519989
offset_bottom = 0.239998
script = ExtResource("1_b1jkg")

[node name="FundingImage" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(78, 78)
layout_mode = 2
texture = ExtResource("1_lnd5c")
expand_mode = 3
stretch_mode = 5

[node name="FundingText" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.913709, 0.707579, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.760784)
theme_override_font_sizes/font_size = 50
text = "20
"
horizontal_alignment = 1
vertical_alignment = 1
